[project]
name = "koromi"
version = "0.1.0"
description = "Text-To-Speech App for your articles and newsletter using the Kokoro 82M TTS Model"
readme = "README.md"
requires-python = ">=3.13.11"
dependencies = [
    "reflex>=0.8.22",
]

[tool.ruff]
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".pants.d",
    ".pytest_cache",
    ".ruff_cache",
    ".svn",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 90
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = ["F401", "CPY", "D", "T20", "I", "ERA001", "COM812"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
